lox-tests/tests/function/body_must_be_block.stderr
ERROR: Expected '{' before function body
 --> 3:1
  |
3 | fun f() 123;
  | ^---------^
